testsuite/tests/deriving/should_fail/T9687.stderr

T9687.hs:4:10: error:
    Class ‘Typeable’ does not support user-specified instances
